modules application, import core and exports

--- a/angular.json
+++ b/angular.json
@@ -123,6 +123,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "crm-atos-juillet"
+    }
+  },
+  "defaultProject": "crm-atos-juillet",
+  "cli": {
+    "analytics": "eeee380e-8d3e-497b-a1d2-44dcfa63db0e"
+  }
 }
